# coincidence

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci_linux.yml
coincidence/: __init__.py  fixtures.py  params.py  regressions.py  selectors.py  utils.py
doc-source/: Source.rst  changelog.rst  conf.py  contributing.rst  index.rst  internal_autoprotocol.py  license.rst  local_extension.py  requirements.txt  succinct_seealso.py
doc-source/_templates/: layout.html
doc-source/api/: coincidence.rst  fixtures.rst  params.rst  regressions.rst  selectors.rst  utils.rst
tests/: requirements.txt  test_fixtures.py  test_params.py  test_regressions.py  test_selectors.py  test_utils.py
tests/test_regressions_/: test_advanced_data_regression_Nested_CustomMapping_NamedTuple_.yml  test_advanced_data_regression_Nested_OrderedDict_CustomSequence_.yml  test_advanced_data_regression_capsys.yml  test_advanced_data_regression_capsys_nested.yml  test_advanced_data_regression_pathlib_purewindowspath_.yml  test_advanced_data_regression_pathplus_.yml  test_advanced_data_regression_tuple_.yml  test_advanced_file_regression_output._py_  test_check_file_regression.txt
