[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "coincidence"
version = "0.2.3"
description = "Helper functions for pytest."
readme = "README.rst"
keywords = [ "utilities", "pytest", "testing", "unittest", "regression",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/coincidence"
"Issue Tracker" = "https://github.com/domdfcoding/coincidence/issues"
"Source Code" = "https://github.com/domdfcoding/coincidence"
Documentation = "https://coincidence.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
